<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="weather">Weather:</string>
    <string name="get_weather">Get weather</string>
    <string name="enter_name_city">Enter name of city</string>
    <string name="temperature">Temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="celsius" translatable="false">\u2103</string>
    <string name="version_app">Version App:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="e_mail" translatable="false">E-mail:</string>
    <string name="created">Created:</string>
    <string name="city">City</string>
    <string name="info">Info</string>
    <string name="enter_email">Enter e-mail</string>
    <string name="save_user">Save User</string>
    <string name="logout_user">Logout</string>
    <string name="change_color">Change color</string>
    <string name="percent" translatable="false">%</string>
    <string name="pressureUni" translatable="false">\u3371</string>
    <string name="degrees" translatable="false">\u00b0</string>
    <string name="wind_speed_symbol" translatable="false">km/h</string>
    <string name="coordinates">Coordinates:</string>
    <string name="settings">Settings</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="wind_degree">Wind degree:</string>
    <string name="not_valid_email">Not valid e-mail</string>
    <string name="location">Location</string>
    <string name="max_temperature">"Max temperature: "</string>
    <string name="min_temperature">Min temperature:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


</resources>
