<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:background="@android:color/white"
    android:orientation="vertical">

    <EditText
        android:id="@+id/inputUserEmail"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:hint="@string/enter_email"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="filip.gorsek@gmail.com" />

    <Button
        android:id="@+id/saveLogoutBtn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/get_weather_btn"
        android:text="@string/save_user"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/inputUserEmail" />

    <Button
        android:id="@+id/changeColorButton"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/get_weather_btn"
        android:text="@string/change_color"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/saveLogoutBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>